src/objects/User_Story__c.object
<CustomObject>
    <description>User Stories and Bugs</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>Details of business acceptance criteria</description>
        <inlineHelpText>Details of business acceptance criteria</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The full detail for this User Story</description>
        <inlineHelpText>The full detail for this User Story</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Epic for this User Story. An Epic is a group of related User Stories.</description>
        <inlineHelpText>The parent Epic for this User Story. An Epic is a group of related User Stories.</inlineHelpText>
        <label>Epic</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>The unique case insensitive value for this record from another system. Only visible to Sys Admins.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique case insensitive value for this record from another system. Only visible to Sys Admins.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of this User Story as set by the business through the Product Owner</description>
        <inlineHelpText>The priority of this User Story as set by the business through the Product Owner</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Not Prioritised</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>10000</defaultValue>
        <description>The absolute rank of this User Story in relation to other User Stories in the Product Backlog</description>
        <inlineHelpText>The absolute rank of this User Story in relation to other User Stories in the Product Backlog</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sprint this User Story is contained within</description>
        <inlineHelpText>The Sprint this User Story is contained within</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipName>UserStory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of this User Story</description>
        <inlineHelpText>The current status of this User Story</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Indicator__c</fullName>
        <description>Visual indicator of User Story Status</description>
        <formula>IMAGE (
	CASE(Status__c , 
		&quot;Closed&quot;, &quot;/img/samples/flag_green.gif&quot;,
		&quot;In Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
		&quot;Not Started&quot;, &quot;/img/samples/flag_red.gif&quot;, 
		&quot;/s.gif&quot;), 
	&quot;User Story Status&quot;
)</formula>
        <inlineHelpText>Visual indicator of User Story Status</inlineHelpText>
        <label>Story Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Number__c</fullName>
        <description>Unique reference for each User Story</description>
        <displayFormat>US-{000}</displayFormat>
        <inlineHelpText>Unique reference for each User Story</inlineHelpText>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <description>The Story Point value for this User Story. Scale: 0, 1, 2, 3, 5, 8, 13, 20, 40, 100</description>
        <inlineHelpText>The Story Point value for this User Story. Scale: 0, 1, 2, 3, 5, 8, 13, 20, 40, 100</inlineHelpText>
        <label>Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Theme that this User Story is a part of e.g., Credit Card stories. A Theme is a top-level objective that may span projects and products. Themes may be broken down into sub-themes, which are more likely to be product-specific. At its most granular form, a Theme may be an Epic.
Themes can be used at both Programme and Project Level to drive strategic alignment and communicate a clear direction.</description>
        <inlineHelpText>Theme this User Story is a part of e.g., Credit Card stories. A Theme is a top-level objective that may span projects and products. Themes may be broken down into sub-themes, which are more likely to be product-specific and at most granular form an Epic.</inlineHelpText>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Remaining_Number__c</fullName>
        <description>The total hours remaining for all Not Started and In Progress User Story Tasks currently associated with this User Story.</description>
        <inlineHelpText>The total hours remaining for all Not Started and In Progress User Story Tasks currently associated with this User Story.</inlineHelpText>
        <label>Total Hours Remaining Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story_Rank__c</fullName>
        <description>Calculated rank of this User Story based on combined Status and Rank. Used for sorting.</description>
        <formula>TEXT(Status__c) &amp; &apos;-&apos; &amp;  TEXT(Rank__c)</formula>
        <inlineHelpText>Calculated rank of this User Story based on combined Status and Rank.</inlineHelpText>
        <label>User Story Rank</label>
        <type>Text</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Points__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Rank__c</columns>
        <columns>Theme__c</columns>
        <columns>Epic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SE_Water</fullName>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Points__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Rank__c</columns>
        <columns>Theme__c</columns>
        <columns>Epic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>SE Water Portal Dev - April</value>
        </filters>
        <label>SE Water</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>